# test-poetry-airclick

./: pyproject.toml
.github/workflows/: semgrep.yaml
test_poetry_airclick/: main.py
